--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,14 +1,22 @@
 {
-  "coc.preferences.hoverTarget": "preview",
   "signature.enable": false,
-  "suggest.echodocSupport": true,
   "suggest.enablePreview": false,
-  "suggest.floatEnable": false,
-  "suggest.triggerCompletionWait": 200,
+  "suggest.floatEnable": true,
+  "suggest.triggerCompletionWait": 50,
   "suggest.maxCompleteItemCount": 16,
-  "typescript.preferences.quoteStyle": "double",
-  "javascript.preferences.quoteStyle": "double",
+  "tailwindCSS.emmetCompletions": true,
+  "tailwindCSS.headwind.runOnSave": true,
+  "tailwindCSS.jsLanguages": [
+      "javascript",
+      "javascriptreact",
+      "reason",
+      "typescriptreact"
+  ],
+  "typescript.preferences.quoteStyle": "single",
+  "javascript.preferences.quoteStyle": "single",
   "typescript.suggest.completeFunctionCalls": false,
   "javascript.suggest.completeFunctionCalls": false,
-  "coc.preferences.formatOnSaveFiletypes": ["css", "svelte", "vue", "javascript", "typescript"]
+  "prettier.tabWidth": 4,
+  "prettier.singleQuote": true,
+  "coc.preferences.formatOnSaveFiletypes": ["css", "svelte","javascript", "typescript","typescriptreact"]
 }
